<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frg_user_profile__coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".profile.presentation.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/frg_user_profile__appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/frg_user_profile__collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|snap"
            app:titleEnabled="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/frg__user_profile__iv_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="24dp"
                    app:civ_border_color="@color/primary_color"
                    app:civ_border_width="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/frg__user_profile__iv_avatar_stub"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_unknown_user_30"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/frg__user_profile__iv_avatar"
                    app:layout_constraintEnd_toEndOf="@id/frg__user_profile__iv_avatar"
                    app:layout_constraintStart_toStartOf="@id/frg__user_profile__iv_avatar"
                    app:layout_constraintTop_toTopOf="@id/frg__user_profile__iv_avatar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/frg__user_profile__toolbar_title_expanded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@color/white"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/frg__user_profile__iv_avatar"
                    app:layout_constraintStart_toStartOf="@id/frg__user_profile__iv_avatar"
                    app:layout_constraintTop_toBottomOf="@id/frg__user_profile__iv_avatar"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="svyat" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/frg__user_profile__toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_collapseMode="pin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/frg__user_profile__toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="Поиск" />

            <ImageView
                android:id="@+id/frg__user_profile__ib_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="?selectableItemBackground"
                android:padding="8dp" />

            <ImageView
                android:id="@+id/frg__user_profile__iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="?selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/ic_back_24" />


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frg_user_profile__rv_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frg_user_profile__appBarLayout"
        tools:itemCount="3"
        tools:listitem="@layout/item_profile_post" />

    <include layout="@layout/empty_posts" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>