...
        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10.10.2010" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_post__iv_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_margin="16dp"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
...
